--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.JortVlaming</groupId>
     <artifactId>project-2-terminal-game</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
 
 </project>
