Add Maven Jar Plugin configuration for building executable JAR

--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,20 @@
     <artifactId>project-2-terminal-game</artifactId>
     <version>1.0</version>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>me.JortVlaming.game.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
